# langchain-cohere-qdrant-retrieval

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
